--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "spoof-detection"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = "=3.11"
 dependencies = [
     "fastapi>=0.128.0",
     "librosa>=0.11.0",
